objects/Events__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Action_for_Classification__c</fullName>
        <formula>If(RecordType.Name  = &quot;Internal Event&quot;,
&quot;Not applicable for Internal Events&quot;,
(HYPERLINK(&quot;/lightning/cmp/c__EMT_EventClassificationSelection?&quot;+&quot;c__id=&quot;+ Id ,&quot;Select Event Classification&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Sub_Classification_for_Approval__c</fullName>
        <formula>if( ( ISPICKVAL(Event_Classification_for_Approvals__c,&quot;Market Event&quot;) ) ,
if((ISPICKVAL(CT_Market__c ,&quot;North America&quot;) &amp;&amp; Sum_of_Budget_EUR__c &gt; 0 &amp;&amp; Sum_of_Budget_EUR__c &lt;= 15000),
&quot;Small&quot;,
if((ISPICKVAL(CT_Market__c ,&quot;North America&quot;) &amp;&amp; Sum_of_Budget_EUR__c &gt; 15000 &amp;&amp; Sum_of_Budget_EUR__c &lt;= 50000),
&quot;Medium&quot;,
if((ISPICKVAL(CT_Market__c ,&quot;North America&quot;) &amp;&amp; Sum_of_Budget_EUR__c &gt; 50000),
&quot;Large&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;ASEAN &amp; Other Pacific&quot;)||ISPICKVAL(CT_Market__c ,&quot;Indian Subcontinent&quot;)|| ISPICKVAL(CT_Market__c ,&quot;RCA&quot;)) &amp;&amp; Sum_of_Budget_EUR__c &gt; 0 &amp;&amp; Sum_of_Budget_EUR__c &lt;= 2500),
&quot;Small&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;ASEAN &amp; Other Pacific&quot;)||ISPICKVAL(CT_Market__c ,&quot;Indian Subcontinent&quot;)|| ISPICKVAL(CT_Market__c ,&quot;RCA&quot;)) &amp;&amp; Sum_of_Budget_EUR__c &gt; 2500 &amp;&amp; Sum_of_Budget_EUR__c &lt;= 10000),
&quot;Medium&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;ASEAN &amp; Other Pacific&quot;)||ISPICKVAL(CT_Market__c ,&quot;Indian Subcontinent&quot;)|| ISPICKVAL(CT_Market__c ,&quot;RCA&quot;)) &amp;&amp; Sum_of_Budget_EUR__c &gt; 10000),
&quot;Large&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;Africa&quot;)||ISPICKVAL(CT_Market__c ,&quot;Central &amp; East Europe&quot;) || ISPICKVAL(CT_Market__c ,&quot;Middle East &amp; Turkey&quot;) || ISPICKVAL(CT_Market__c ,&quot;Nordics&quot;) || ISPICKVAL(CT_Market__c ,&quot;UK &amp; Ireland&quot;)) &amp;&amp; Sum_of_Budget_EUR__c &gt; 0 &amp;&amp; Sum_of_Budget_EUR__c &lt;= 5000),
&quot;Small&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;Africa&quot;)||ISPICKVAL(CT_Market__c ,&quot;Central &amp; East Europe&quot;) || ISPICKVAL(CT_Market__c ,&quot;Middle East &amp; Turkey&quot;) || ISPICKVAL(CT_Market__c ,&quot;Nordics&quot;) || ISPICKVAL(CT_Market__c ,&quot;UK &amp; Ireland&quot;)) &amp;&amp; Sum_of_Budget_EUR__c &gt; 5000 &amp;&amp; Sum_of_Budget_EUR__c &lt;= 15000),
&quot;Medium&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;Africa&quot;)||ISPICKVAL(CT_Market__c ,&quot;Central &amp; East Europe&quot;) || ISPICKVAL(CT_Market__c ,&quot;Middle East &amp; Turkey&quot;) || ISPICKVAL(CT_Market__c ,&quot;Nordics&quot;) || ISPICKVAL(CT_Market__c ,&quot;UK &amp; Ireland&quot;)) &amp;&amp; Sum_of_Budget_EUR__c &gt; 15000 ),
&quot;Large&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;Benelux&quot;)||ISPICKVAL(CT_Market__c ,&quot;Greater China&quot;) || ISPICKVAL(CT_Market__c ,&quot;DACH&quot;) || ISPICKVAL(CT_Market__c ,&quot;France&quot;) || ISPICKVAL(CT_Market__c ,&quot;Iberia&quot;) || ISPICKVAL(CT_Market__c ,&quot;Italy, Israel &amp; Greece&quot;) || ISPICKVAL(CT_Market__c ,&quot;Japan&quot;) || ISPICKVAL(CT_Market__c ,&quot;Latin America&quot;)   ) &amp;&amp; Sum_of_Budget_EUR__c &gt; 0 &amp;&amp; Sum_of_Budget_EUR__c &lt;= 5000 ),
&quot;Small&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;Benelux&quot;)||ISPICKVAL(CT_Market__c ,&quot;Greater China&quot;) || ISPICKVAL(CT_Market__c ,&quot;DACH&quot;) || ISPICKVAL(CT_Market__c ,&quot;France&quot;) || ISPICKVAL(CT_Market__c ,&quot;Iberia&quot;) || ISPICKVAL(CT_Market__c ,&quot;Italy, Israel &amp; Greece&quot;) || ISPICKVAL(CT_Market__c ,&quot;Japan&quot;) || ISPICKVAL(CT_Market__c ,&quot;Latin America&quot;)   ) &amp;&amp; Sum_of_Budget_EUR__c &gt; 5000 &amp;&amp; Sum_of_Budget_EUR__c &lt;= 20000),
&quot;Medium&quot;,
if(((ISPICKVAL(CT_Market__c ,&quot;Benelux&quot;)||ISPICKVAL(CT_Market__c ,&quot;Greater China&quot;) || ISPICKVAL(CT_Market__c ,&quot;DACH&quot;) || ISPICKVAL(CT_Market__c ,&quot;France&quot;) || ISPICKVAL(CT_Market__c ,&quot;Iberia&quot;) || ISPICKVAL(CT_Market__c ,&quot;Italy, Israel &amp; Greece&quot;) || ISPICKVAL(CT_Market__c ,&quot;Japan&quot;) || ISPICKVAL(CT_Market__c ,&quot;Latin America&quot;)   ) &amp;&amp; Sum_of_Budget_EUR__c &gt; 20000 ),
&quot;Large&quot;,
&quot;&quot;))))))))))))
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Sub-Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Sub_Classification_for_Layout__c</fullName>
        <formula>Event_Sub_Classification_for_Approval__c</formula>
        <label>Event Sub-Classification</label>
        <type>Text</type>
    </fields>
</CustomObject>